@@ -1,3 +1,8 @@
+2018-05-08  Carl Hetherington  <cth@carlh.net>
+
+	* Look at subtitle colour and effect when deciding whether or not to
+	re-make video (should fix #1290).
+
 2018-05-07  Carl Hetherington  <cth@carlh.net>
 
 	* Updated cs_CZ translation from Tomáš Begeni.
